--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,26 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
+
     <!-- Base application theme. -->
-    <style name="Theme.FizzBuzz" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryDark">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+    <style name="AppTheme.Base" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/gray_dark</item>
+        <item name="colorPrimaryDark">@color/black</item>
+        <item name="colorSecondary">@color/colorAccentDark</item>
+
+        <!--Toolbar-->
+        <item name="colorSurface">@color/gray_dark</item>
+
+        <!--Popup menu-->
+        <item name="colorOnSurface">@color/gray_light</item>
+
+        <!-- Background de la app -->
+        <item name="android:colorBackground">?attr/colorPrimaryDark</item>
+
+        <!-- Tema por default de las CardViews-->
+        <item name="materialCardViewStyle">@style/AppTheme.CardView</item>
+
     </style>
+
+    <style name="Theme.FizzBuzz" parent="AppTheme.Base" />
+
 </resources>
