--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,10 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="margin">16dp</dimen>
+    <dimen name="half_margin">8dp</dimen>
+
+    <dimen name="corner_radius">8dp</dimen>
+    <dimen name="card_elevation">5dp</dimen>
+
 </resources>
